# color-flatting-plugin

./: .gitignore  .pnp.cjs  HYBRID-ARCHITECTURE.md  LICENSE  README.md  index.html  manifest.json  package-lock.json  package.json  tsconfig.json  uxp.config.ts  vite.config.ts
native/: CMakeLists.txt  README.md  build-native.sh
native/include/: module.h
native/src/: flats_core.cpp  module.cpp
public-hybrid/mac/arm64/: colorflats-hybrid.uxpaddon
public-hybrid/mac/x64/: colorflats-hybrid.uxpaddon
scripts/: mac-sign.mjs  win-sign.mjs
src/: app.css  globals.ts  index.scss  index.tsx  main.tsx  variables.scss  vite-env.d.ts
src/api/: errors.ts  polyfills.ts  themes-data.ts  themes.ts  uxp.ts
src/hybrid/mac/colorflats-hybrid.xcodeproj/: project.pbxproj
src/hybrid/mac/colorflats-hybrid.xcodeproj/project.xcworkspace/xcuserdata/dmarchant.xcuserdatad/: UserInterfaceState.xcuserstate
src/hybrid/mac/colorflats-hybrid.xcodeproj/xcuserdata/dmarchant.xcuserdatad/xcschemes/: xcschememanagement.plist
src/hybrid/src/: module.cpp
src/hybrid/src/flats/: flats_core.h
src/hybrid/src/utilities/: UxpAddon.cpp  UxpAddon.h  UxpTask.h
src/hybrid/win/: colorflats-hybrid.sln  colorflats-hybrid.vcxproj  colorflats-hybrid.vcxproj.filters
src/lib/: flats.ts  native-bridge.ts
